# radian

./: Dockerfile  Makefile  compose.yaml  deploy.yaml  pyproject.toml
infrastructure/: application.yaml  service.yaml
radian/backend/: main.py
radian/backend/api/: api.py
radian/backend/utils/: builder.py  musiclib.py  solidlib.py  tools.py
radian/backend/views/: views.py
radian/frontend/: index.html  viewer.html
radian/frontend/templates/: viewer.html
radian/static/: sample.stl  stlloader.js  stlviewer.js  style.css
samples/: sample_cube.stl
